--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -35,12 +35,7 @@
                             {% endfor %}
                         </div>
                     {% endfor %}
-                    <button
-                        type="submit"
-                        class="bg-brand-green text-brand-text border-brand-text shadow-neo mt-6 w-full cursor-pointer border-2 px-4 py-3 text-2xl font-bold transition-all duration-150 ease-in-out hover:shadow-none active:translate-x-1 active:translate-y-1"
-                    >
-                        Log In
-                    </button>
+                    {% include 'core/partials/buttons/primary_button.html' with text="Log In" %}
                 </form>
             </div>
             <div class="mt-8">
